[gd_scene load_steps=2 format=2]

[ext_resource path="res://common/interactions/interaction_component.gd" type="Script" id=1]

[node name="InteractionComponent" type="Area2D"]
collision_layer = 0
collision_mask = 32
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_InteractionComponent_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_InteractionComponent_body_exited"]
